--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
 <div id="map"></div>
+
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-const CONFIG_ID = "3d05a814-e5b4-458f-a661-1be8857216a5";
+const CONFIG_ID = "3d05a814-e5b4-458f-a661-1be8857216a5";  // Sentinel Hub config ID
+const GCS_BUCKET = "ndvi-exports";                          // Your GCS bucket
+const NDVI_JSON_FILE = "paddocks_ndvi.json";               // File in bucket
 
 // Initialize map
 const map = L.map('map').setView([-41.225, 174.825], 14);
@@ -33,27 +36,29 @@ L.tileLayer.wms(
 fetch("paddocks.geojson")
   .then(r => r.json())
   .then(geojson => {
-    L.geoJSON(geojson, {
+    const paddockLayer = L.geoJSON(geojson, {
       style: { color: "#ffffff", weight: 2, fillOpacity: 0 },
       onEachFeature: function(feature, layer) {
         layer.bindPopup(`Paddock: ${feature.properties.name}<br>NDVI: Loading...`);
       }
     }).addTo(map);
-  });
 
-// Load NDVI values
-fetch("paddocks_ndvi.json")
-  .then(r => r.json())
-  .then(ndviData => {
-    map.eachLayer(layer => {
-      if (layer.feature) {
-        const name = layer.feature.properties.name;
-        const ndvi = ndviData.find(d => d.paddock_name === name)?.ndvi;
-        if (ndvi !== undefined) {
-          layer.bindPopup(`Paddock: ${name}<br>NDVI: ${ndvi.toFixed(3)}`);
-        }
-      }
-    });
+    // Load NDVI values from GCS
+    const ndviUrl = `https://storage.googleapis.com/${GCS_BUCKET}/${NDVI_JSON_FILE}`;
+    fetch(ndviUrl)
+      .then(r => r.json())
+      .then(ndviData => {
+        paddockLayer.eachLayer(layer => {
+          if (layer.feature) {
+            const name = layer.feature.properties.name;
+            const ndvi = ndviData.find(d => d.paddock_name === name)?.ndvi;
+            if (ndvi !== undefined) {
+              layer.bindPopup(`Paddock: ${name}<br>NDVI: ${ndvi.toFixed(3)}`);
+            }
+          }
+        });
+      })
+      .catch(err => console.error("Failed to load NDVI JSON from GCS:", err));
   });
 </script>
 </body>
