--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
 const GCS_BUCKET = "ndvi-exports";                  // Your GCS bucket
-const NDVI_JSON_FILE = "paddocks_ndvi.json";        // NDVI JSON file name
+const NDVI_JSON_FILE = "paddocks_ndvi_realistic.json";        // NDVI JSON file name
 
 // Initialize map (adjust coordinates/zoom for your farm)
 const map = L.map('map').setView([-41.225, 174.825], 14);
